data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2014.wast
;; 5. **Test Description:** Have a `br_if` instruction within a block that calls an imported function which conditionally throws an exception, triggering stack unwinding.    **Constraint Checked:** Correct operand stack unwinding consistent with label type across module boundary exceptions.    **Relation:** Examines the consistency of stack unwinding and label handling when exceptions are involved across module boundaries.

(assert_invalid
  (module
    (import "env" "conditionally_throw" (func $conditionally_throw (result i32)))
    (func $test
      (block
        (br_if 0 (call $conditionally_throw) (i32.const 0))
        (call $conditionally_throw)
      )
    )
  )
  "type mismatch"
)